feat: swagger docs working and server running
