# main.go
@@ -1,16 +1,10 @@
 package main
 
 import (
-	"sync"
-
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
-)
 
-var (
-	users = map[int]*User{}
-	seq   = 1
-	lock  = sync.Mutex{}
+	user "go-email-verifier/user"
 )
 
 func main() {
@@ -19,8 +13,19 @@ func main() {
 	e.Use(middleware.Logger())
 	e.Use(middleware.Recover())
 
-	e.POST("/v2/users", createUser)
-	e.GET("/v2/users", getAllUsers)
+	// Allows requests from any origin wth GET, HEAD, PUT, POST or DELETE method.
+	e.Use(middleware.CORS())
+
+	// CORS restricted
+	// Allows requests from any `https://labstack.com` or `https://labstack.net` origin
+	// wth GET, PUT, POST or DELETE method.
+	// e.Use(middleware.CORSWithConfig(middleware.CORSConfig{
+	// 	AllowOrigins: []string{"https://labstack.com", "https://labstack.net"},
+	// 	AllowMethods: []string{http.MethodGet, http.MethodPut, http.MethodPost, http.MethodDelete},
+	// }))
+
+	e.POST("/v2/users", user.CreateUser)
+	e.GET("/v2/users", user.GetAllUsers)
 
 	e.Logger.Fatal(e.Start(":1323"))
 }
